# col

./: .gitignore  Cargo.toml  ComplexTest.gml  Sample.gml  Sample.ll  Tests.gml  logical_operators_test.gml  readme.md  readme_zh-hant.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  coverage.yml  readme.md  release.yml  update-deps.yml
csharp-bindings/: COLPrintService.cs  COLRuntime.cs  COLRuntime.csproj  README.md  README_CN.md  Sample.gml
src/: codegen.rs  ffi.rs  handler.rs  lib.rs  main.rs  parser.rs  tests.rs  token.rs
src/codegen/: comprehensive_test.rs  ir_generator.rs  ir_generator_helpers.rs  ir_generator_visit_expr.rs  ir_generator_visit_stmt.rs  jit.rs  test.rs
src/codegen/ir_generator/: ir_helpers.rs  visit_expr.rs  visit_stmt.rs
src/handler/: codegen_handler.rs  file_handler.rs  output_handler.rs  parse_handler.rs  symbol_table_handler.rs
src/parser/: expr.rs  func.rs  func_def.rs  program.rs  stmt.rs  test.rs  top_level.rs  visitor.rs
src/parser/visitor/: dead_code_detector.rs  performance_warner.rs  readme.md  symbol_table_builder.rs  symbol_table_builder_tests.rs  type_checker.rs
src/tests/: codegen_comprehensive_test.rs  codegen_test.rs  ffi_test.rs  parser_test.rs  symbol_table_builder_tests.rs  tests_helper.rs
src/token/: test.rs
src/utils/: colorize.rs
