[package]
name = "col"
version = "0.1.0"
edition = "2024"

[lib]
name = "col_runtime"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "col"
path = "src/main.rs"

[dependencies]
ariadne = "0.5.1"
chumsky = "0.11.1"
logos = "0.15.1"
owo-colors = "4.2.3"

inkwell = { version = "0.6.0", features = ["llvm18-1"] }
